fixed contrast in 'Change statement' button, and added the statement in the gitignore

--- a/frontend/src/styles/PrivacyStatement.css
+++ b/frontend/src/styles/PrivacyStatement.css
@@ -34,6 +34,8 @@
 
 .change-privacy-statement__button {
     background-color: var(--secondary-color);
+    color: white;
+    font-weight: bold;
     border-radius: 5px;
     padding: 0.5em;
     width: 200px;
